crates/xberg-ffi/include/xberg.h

typedef uint64_t XBERGAlefHandle;
int32_t xberg_extraction_config_default_extraction_timeout_has_result(void);
XBERGAlefHandle xberg_extraction_config_default(void);
int32_t xberg_extraction_config_validate(XBERGAlefHandle this_);
int32_t xberg_extraction_config_needs_image_data(XBERGAlefHandle this_);
int32_t xberg_extraction_config_needs_image_processing(XBERGAlefHandle this_);
XBERGAlefHandle xberg_extraction_result_single(XBERGAlefHandle result);
XBERGAlefHandle xberg_footnote_config_default(void);
XBERGAlefHandle
xberg_footnote_config_with_parse_citations(XBERGAlefHandle this_,
                                           int32_t enabled);
XBERGAlefHandle xberg_heuristics_config_default(void);
int32_t xberg_heuristics_config_validate(XBERGAlefHandle this_);
XBERGAlefHandle xberg_hierarchy_config_default(void);
XBERGAlefHandle xberg_html_output_config_default(void);
XBERGAlefHandle xberg_image_extraction_config_default(void);
XBERGAlefHandle xberg_image_preprocessing_config_default(void);
XBERGAlefHandle xberg_keyword_config_default(void);
XBERGAlefHandle xberg_language_detection_config_default(void);
XBERGAlefHandle xberg_late_interaction_config_default(void);
XBERGAlefHandle xberg_layout_detection_config_default(void);
int32_t xberg_llm_config_validate(XBERGAlefHandle this_);
XBERGAlefHandle xberg_meta_schema_compile(const char *meta_schema_json);
XBERGAlefHandle xberg_meta_schema_parse_preset(XBERGAlefHandle this_,
                                               const char *path,
                                               const uint8_t *raw,
                                               uintptr_t raw_len);
int32_t xberg_metadata_is_empty(XBERGAlefHandle this_);
int32_t xberg_multi_vector_embedding_is_well_formed(XBERGAlefHandle this_);
XBERGAlefHandle xberg_multidoc_thresholds_default(void);
XBERGAlefHandle xberg_ngram_range_default(void);
XBERGAlefHandle xberg_ocr_config_default(void);
XBERGAlefHandle xberg_ocr_quality_thresholds_default(void);
XBERGAlefHandle xberg_paddle_ocr_config_with_cache_dir(XBERGAlefHandle this_,
                                                       const char *path);
XBERGAlefHandle
xberg_paddle_ocr_config_with_table_detection(XBERGAlefHandle this_,
                                             int32_t enable);
XBERGAlefHandle xberg_paddle_ocr_config_with_angle_cls(XBERGAlefHandle this_,
                                                       int32_t enable);
XBERGAlefHandle
xberg_paddle_ocr_config_with_det_db_thresh(XBERGAlefHandle this_,
                                           float threshold);
XBERGAlefHandle
xberg_paddle_ocr_config_with_det_db_box_thresh(XBERGAlefHandle this_,
                                               float threshold);
XBERGAlefHandle
xberg_paddle_ocr_config_with_det_db_unclip_ratio(XBERGAlefHandle this_,
                                                 float ratio);
XBERGAlefHandle
xberg_paddle_ocr_config_with_det_limit_side_len(XBERGAlefHandle this_,
                                                uint32_t length);
XBERGAlefHandle
xberg_paddle_ocr_config_with_rec_batch_num(XBERGAlefHandle this_,
                                           uint32_t batch_size);
XBERGAlefHandle xberg_paddle_ocr_config_with_drop_score(XBERGAlefHandle this_,
                                                        float score);
XBERGAlefHandle xberg_paddle_ocr_config_with_padding(XBERGAlefHandle this_,
                                                     uint32_t padding);
XBERGAlefHandle xberg_paddle_ocr_config_with_model_tier(XBERGAlefHandle this_,
                                                        const char *tier);
XBERGAlefHandle
xberg_paddle_ocr_config_with_model_version(XBERGAlefHandle this_,
                                           const char *version);
XBERGAlefHandle xberg_paddle_ocr_config_default(void);
XBERGAlefHandle xberg_page_config_default(void);
uint32_t xberg_page_range_page_count(XBERGAlefHandle this_);
XBERGAlefHandle xberg_page_signals_from_page_text(uint32_t page_number,
                                                  const char *text,
                                                  float layout_text_density);
XBERGAlefHandle xberg_pdf_config_default(void);
int32_t xberg_pdf_config_validate(XBERGAlefHandle this_);
XBERGAlefHandle xberg_post_processor_config_default(void);
XBERGAlefHandle xberg_rake_params_default(void);
XBERGAlefHandle xberg_redaction_config_default(void);
int32_t xberg_redaction_config_validate(XBERGAlefHandle this_);
XBERGAlefHandle xberg_redaction_pattern_labeled(const char *label,
                                                const char *pattern);
XBERGAlefHandle xberg_redaction_term_literal(const char *value);
XBERGAlefHandle xberg_redaction_term_labeled(const char *label,
                                             const char *value);