packages/csharp/src/Xberg/NativeMethods.cs


  [DllImport(
      LibName, CallingConvention = CallingConvention.Cdecl,
      EntryPoint =
          "xberg_extraction_config_default_extraction_timeout_has_result")]
  internal static extern int
  ExtractionConfigDefaultExtractionTimeoutHasResult();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extraction_config_default")]
  internal static extern ulong ExtractionConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extraction_config_validate")]
  internal static extern void ExtractionConfigValidate(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extraction_config_needs_image_data")]
  internal static extern int ExtractionConfigNeedsImageData(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extraction_config_needs_image_processing")]
  internal static extern int ExtractionConfigNeedsImageProcessing(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_extraction_result_single")]
  internal static extern ulong ExtractionResultSingle(ulong result);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_footnote_config_default")]
  internal static extern ulong FootnoteConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_footnote_config_with_parse_citations")]
  internal static extern ulong FootnoteConfigWithParseCitations(ulong handle,
                                                                int enabled);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_heuristics_config_default")]
  internal static extern ulong HeuristicsConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_heuristics_config_validate")]
  internal static extern void HeuristicsConfigValidate(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_hierarchy_config_default")]
  internal static extern ulong HierarchyConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_html_output_config_default")]
  internal static extern ulong HtmlOutputConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_image_extraction_config_default")]
  internal static extern ulong ImageExtractionConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_image_preprocessing_config_default")]
  internal static extern ulong ImagePreprocessingConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_keyword_config_default")]
  internal static extern ulong KeywordConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_language_detection_config_default")]
  internal static extern ulong LanguageDetectionConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_late_interaction_config_default")]
  internal static extern ulong LateInteractionConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_layout_detection_config_default")]
  internal static extern ulong LayoutDetectionConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_llm_config_validate")]
  internal static extern void LlmConfigValidate(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_meta_schema_compile")]
  internal static extern ulong
  MetaSchemaCompile([MarshalAs(UnmanagedType.LPUTF8Str)] string metaSchemaJson);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_meta_schema_parse_preset")]
  internal static extern ulong
  MetaSchemaParsePreset(ulong handle,
                        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
                        IntPtr raw, UIntPtr rawLen);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_metadata_is_empty")]
  internal static extern int MetadataIsEmpty(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_multi_vector_embedding_is_well_formed")]
  internal static extern int MultiVectorEmbeddingIsWellFormed(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_multidoc_thresholds_default")]
  internal static extern ulong MultidocThresholdsDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_ngram_range_default")]
  internal static extern ulong NgramRangeDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_ocr_config_default")]
  internal static extern ulong OcrConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_ocr_quality_thresholds_default")]
  internal static extern ulong OcrQualityThresholdsDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_paddle_ocr_config_with_cache_dir")]
  internal static extern ulong
  PaddleOcrConfigWithCacheDir(ulong handle,
                              [MarshalAs(UnmanagedType.LPUTF8Str)] string path);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_paddle_ocr_config_with_table_detection")]
  internal static extern ulong PaddleOcrConfigWithTableDetection(ulong handle,
                                                                 int enable);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_paddle_ocr_config_with_angle_cls")]
  internal static extern ulong PaddleOcrConfigWithAngleCls(ulong handle,
                                                           int enable);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_paddle_ocr_config_with_det_db_thresh")]
  internal static extern ulong PaddleOcrConfigWithDetDbThresh(ulong handle,
                                                              float threshold);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_paddle_ocr_config_with_det_db_box_thresh")]
  internal static extern ulong
  PaddleOcrConfigWithDetDbBoxThresh(ulong handle, float threshold);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_paddle_ocr_config_with_det_db_unclip_ratio")]
  internal static extern ulong PaddleOcrConfigWithDetDbUnclipRatio(ulong handle,
                                                                   float ratio);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_paddle_ocr_config_with_det_limit_side_len")]
  internal static extern ulong PaddleOcrConfigWithDetLimitSideLen(ulong handle,
                                                                  uint length);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_paddle_ocr_config_with_rec_batch_num")]
  internal static extern ulong PaddleOcrConfigWithRecBatchNum(ulong handle,
                                                              uint batchSize);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_paddle_ocr_config_with_drop_score")]
  internal static extern ulong PaddleOcrConfigWithDropScore(ulong handle,
                                                            float score);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_paddle_ocr_config_with_padding")]
  internal static extern ulong PaddleOcrConfigWithPadding(ulong handle,
                                                          uint padding);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_paddle_ocr_config_with_model_tier")]
  internal static extern ulong PaddleOcrConfigWithModelTier(
      ulong handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string tier);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_paddle_ocr_config_with_model_version")]
  internal static extern ulong PaddleOcrConfigWithModelVersion(
      ulong handle, [MarshalAs(UnmanagedType.LPUTF8Str)] string version);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_paddle_ocr_config_default")]
  internal static extern ulong PaddleOcrConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_page_config_default")]
  internal static extern ulong PageConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_page_range_page_count")]
  internal static extern uint PageRangePageCount(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_page_signals_from_page_text")]
  internal static extern ulong
  PageSignalsFromPageText(uint pageNumber,
                          [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
                          float layoutTextDensity);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_pdf_config_default")]
  internal static extern ulong PdfConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_pdf_config_validate")]
  internal static extern void PdfConfigValidate(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_post_processor_config_default")]
  internal static extern ulong PostProcessorConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_rake_params_default")]
  internal static extern ulong RakeParamsDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_redaction_config_default")]
  internal static extern ulong RedactionConfigDefault();

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_redaction_config_validate")]
  internal static extern void RedactionConfigValidate(ulong handle);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_redaction_pattern_labeled")]
  internal static extern ulong
  RedactionPatternLabeled([MarshalAs(UnmanagedType.LPUTF8Str)] string label,
                          [MarshalAs(UnmanagedType.LPUTF8Str)] string pattern);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_redaction_term_literal")]
  internal static extern ulong
  RedactionTermLiteral([MarshalAs(UnmanagedType.LPUTF8Str)] string value);

  [DllImport(LibName, CallingConvention = CallingConvention.Cdecl,
             EntryPoint = "xberg_redaction_term_labeled")]
  internal static extern ulong
  RedactionTermLabeled([MarshalAs(UnmanagedType.LPUTF8Str)] string label,
                       [MarshalAs(UnmanagedType.LPUTF8Str)] string value);
